Unify CSS styling and links across all HTML pages for consistent appearance

--- a/impressum.html
+++ b/impressum.html
@@ -301,6 +301,7 @@
         
         .footer-section ul {
             list-style: none;
+            padding: 0;
         }
         
         .footer-section ul li {
