--- a/index.html
+++ b/index.html
@@ -590,6 +590,7 @@
         
         .footer-section ul {
             list-style: none;
+            padding: 0;
         }
         
         .footer-section ul li {
