--- a/index.html
+++ b/index.html
@@ -683,6 +683,7 @@
                 <li><a href="#features">Features</a></li>
                 <li><a href="#how-it-works">So funktioniert's</a></li>
                 <li><a href="#download">Bald verfügbar</a></li>
+                <li><a href="tester-anmeldung.html">Beta-Tester werden</a></li>
                 <li><a href="#contact">Kontakt</a></li>
             </ul>
             <button class="mobile-menu-btn">☰</button>
