Update privacy policy for Web3Forms to ensure DSGVO compliance

--- a/tester-anmeldung.html
+++ b/tester-anmeldung.html
@@ -543,7 +543,7 @@
                 
                 <div class="checkbox-group">
                     <input type="checkbox" id="privacy" name="privacy" required>
-                    <label for="privacy">Ich habe die <a href="datenschutz.html" target="_blank">Datenschutzerklärung</a> gelesen und stimme der Verarbeitung meiner Daten zu. <span class="required">*</span></label>
+                    <label for="privacy">Ich habe die <a href="datenschutz.html" target="_blank">Datenschutzerklärung</a> gelesen und stimme der Verarbeitung meiner Daten zu. Die Daten werden über Web3Forms verarbeitet, um E-Mails zu versenden. <span class="required">*</span></label>
                 </div>
                 
                 <div class="checkbox-group">
