Add localStorage documentation to privacy policy for DSGVO compliance

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -567,7 +567,8 @@
             <p><strong>Weitergabe:</strong> Ihre Daten werden zur Versendung der E-Mails an Web3Forms übermittelt. Web3Forms verarbeitet die Daten nur im Auftrag und löscht sie nach dem Versand. Eine weitere Weitergabe an Dritte erfolgt nicht.</p>
             
             <h2>10. Cookies und lokale Speicherung</h2>
-            <p>Diese App verwendet keine Cookies im herkömmlichen Sinne. Wir speichern jedoch lokale Daten auf Ihrem Gerät (z.B. über AsyncStorage), um die App-Funktionalität zu gewährleisten. Diese Daten werden nur lokal gespeichert und nicht an Dritte weitergegeben.</p>
+            <p><strong>Website:</strong> Diese Website verwendet keine Cookies im herkömmlichen Sinne. Wir speichern jedoch lokal auf Ihrem Gerät, ob Sie den Cookie-Hinweis gesehen haben (localStorage), um zu vermeiden, dass der Hinweis bei jedem Besuch erneut angezeigt wird. Diese Information wird nur lokal in Ihrem Browser gespeichert und nicht an uns oder Dritte übertragen.</p>
+            <p><strong>App:</strong> Die App verwendet keine Cookies im herkömmlichen Sinne. Wir speichern jedoch lokale Daten auf Ihrem Gerät (z.B. über AsyncStorage), um die App-Funktionalität zu gewährleisten. Diese Daten werden nur lokal gespeichert und nicht an Dritte weitergegeben.</p>
             <p>Gespeichert werden können:</p>
             <ul>
                 <li>Authentifizierungs-Tokens</li>
