Add EmailJS admin template ID

--- a/tester-anmeldung.html
+++ b/tester-anmeldung.html
@@ -786,7 +786,7 @@
             };
             
             // Sende E-Mail an Admin
-            emailjs.send('service_n819ygk', 'YOUR_TEMPLATE_ID_ADMIN', adminTemplateParams)
+            emailjs.send('service_n819ygk', 'template_wvapw9b', adminTemplateParams)
                 .then(function() {
                     // Sende Bestätigungs-E-Mail an Tester
                     return emailjs.send('service_n819ygk', 'YOUR_TEMPLATE_ID_CONFIRMATION', testerTemplateParams);
