Add EmailJS confirmation template ID

--- a/tester-anmeldung.html
+++ b/tester-anmeldung.html
@@ -789,7 +789,7 @@
             emailjs.send('service_n819ygk', 'template_wvapw9b', adminTemplateParams)
                 .then(function() {
                     // Sende Bestätigungs-E-Mail an Tester
-                    return emailjs.send('service_n819ygk', 'YOUR_TEMPLATE_ID_CONFIRMATION', testerTemplateParams);
+                    return emailjs.send('service_n819ygk', 'template_wvapw9b', testerTemplateParams);
                 })
                 .then(function() {
                     // Erfolg
