Add EmailJS public key - complete EmailJS setup

--- a/tester-anmeldung.html
+++ b/tester-anmeldung.html
@@ -16,7 +16,7 @@
         // Kostenloser Account: https://www.emailjs.com/
         (function(){
             emailjs.init({
-                publicKey: "YOUR_PUBLIC_KEY",
+                publicKey: "OQUrvCuixpqHFwZY3",
                 blockHeadless: true, // Verhindert Tracking ohne Einwilligung
                 blockList: {
                     list: ['blockedDomain.com'], // Optional: Block-Liste
