Erfolgsmeldung angepasst: Hinweis auf BestÃ¤tigungs-E-Mail entfernt

--- a/tester-anmeldung.html
+++ b/tester-anmeldung.html
@@ -519,7 +519,7 @@
             
             <div class="success-message" id="success-message">
                 <strong>Vielen Dank für deine Anmeldung!</strong><br>
-                <p style="margin-top: 0.5rem;">Wir haben deine Anmeldung erhalten und dir eine Bestätigungs-E-Mail gesendet. Bitte überprüfe dein Postfach (auch den Spam-Ordner).</p>
+                <p style="margin-top: 0.5rem;">Wir haben deine Anmeldung erhalten und freuen uns sehr, dass du uns bei der Entwicklung helfen möchtest.</p>
                 <p style="margin-top: 0.5rem;">Wir werden uns in Kürze bei dir melden, sobald die Beta-Version verfügbar ist.</p>
             </div>
             
