Prominente Beta-Tester CTA Buttons auf Startseite hinzugefÃ¼gt

--- a/index.html
+++ b/index.html
@@ -696,9 +696,18 @@
             <h1>Gemeinsam reisen, gemeinsam erleben</h1>
             <p>Finde deine perfekten Reisebegleiter und teile unvergessliche Abenteuer. Twavio verbindet Reisende, die dieselbe Leidenschaft für das Entdecken teilen.</p>
             <div class="cta-buttons">
-                <a href="#download" class="btn btn-primary">Jetzt starten</a>
+                <a href="tester-anmeldung.html" class="btn btn-primary">🚀 Beta-Tester werden</a>
                 <a href="#features" class="btn btn-secondary">Mehr erfahren</a>
             </div>
+        </div>
+    </section>
+
+    <!-- Beta Tester CTA Banner -->
+    <section style="background: var(--gradient-primary); padding: 3rem 2rem; text-align: center; color: white;">
+        <div class="container" style="max-width: 800px;">
+            <h2 style="font-size: clamp(1.8rem, 3vw, 2.5rem); margin-bottom: 1rem; color: white; font-weight: 700;">🚀 Werde Beta-Tester!</h2>
+            <p style="font-size: clamp(1rem, 1.5vw, 1.2rem); margin-bottom: 2rem; opacity: 0.95; line-height: 1.7;">Hilf uns, Twavio zu verbessern! Als Beta-Tester erhältst du frühen Zugang zur App und kannst aktiv an der Entwicklung mitwirken.</p>
+            <a href="tester-anmeldung.html" class="btn btn-primary" style="background: white; color: var(--primary-color); font-size: 1.1rem; padding: 1.2rem 3rem; display: inline-block; box-shadow: 0 6px 20px rgba(0, 0, 0, 0.25);">Jetzt als Beta-Tester anmelden</a>
         </div>
     </section>
 
@@ -833,7 +842,8 @@
             <div style="margin-top: 3.5rem; max-width: 550px; margin-left: auto; margin-right: auto;">
                 <p style="margin-bottom: 2rem; font-size: 1.1rem; opacity: 0.95; color: white;">Bleib informiert und erfahre als Erster, wenn Twavio verfügbar ist:</p>
                 <div style="display: flex; gap: 1rem; flex-wrap: wrap; justify-content: center;">
-                    <a href="mailto:info@twavio.com?subject=Benachrichtigung%20bei%20App-Launch" class="btn btn-primary" style="background: white; color: var(--primary-color);">📧 E-Mail senden</a>
+                    <a href="tester-anmeldung.html" class="btn btn-primary" style="background: white; color: var(--primary-color); font-size: 1.1rem; padding: 1.2rem 2.5rem;">🚀 Beta-Tester werden</a>
+                    <a href="mailto:info@twavio.com?subject=Benachrichtigung%20bei%20App-Launch" class="btn btn-secondary" style="font-size: 1rem; padding: 1rem 2rem;">📧 E-Mail senden</a>
                 </div>
             </div>
             
